added code for project 3, cannot make map for amcl

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -9,3 +9,13 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 RUN apt-get update && apt-get install --no-install-recommends -y \
     python-matplotlib python-numpy python2.7-dev \
   && rm -rf /var/lib/apt/lists/*
+
+ # install additional ros packages
+RUN apt-get update && apt-get install --no-install-recommends -y \
+    ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher \
+  && rm -rf /var/lib/apt/lists/*
+
+# install protobuf
+RUN apt-get update && apt-get install --no-install-recommends -y \
+    libignition-math2-dev protobuf-compiler \
+  && rm -rf /var/lib/apt/lists/*
