--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -19,3 +19,8 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 RUN apt-get update && apt-get install --no-install-recommends -y \
     libignition-math2-dev protobuf-compiler \
   && rm -rf /var/lib/apt/lists/*
+
+# install protobuf
+RUN apt-get update && apt-get install --no-install-recommends -y \
+    ros-kinetic-rtabmap-ros \
+  && rm -rf /var/lib/apt/lists/*
